# campos-esoccer-bot

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  FLUXO.md  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  prediction.py  routes.py  scheduler.py
app/infra/: config.py  database.py  models.py
app/jobs/: __init__.py  esoccer.py  example.py
app/scrapers/: aceodds.py  tipmanager.py  totalcorner.py
app/telegram/: client.py  handler.py  polling.py  service.py
scripts/: setup.sh  validate.sh
tests/: conftest.py  test_aceodds.py  test_config.py  test_endpoints.py  test_esoccer_job.py  test_handler.py  test_models.py  test_prediction.py  test_scheduler.py  test_service.py  test_telegram_client.py  test_totalcorner.py
